Corrected ICPR links
Corrected ICPR links.

Changes to be committed:
      renamed:    files/papers/ICRP2020_1127_poster.pdf -> files/papers/ICPR2020_1127_poster.pdf
      modified:   index.html

--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@
 			  <br>
               <em>ICPR</em>, 2020  
               <br>
-							<a href="./files/papers/ICPR2020_1127_paper.pdf" target="_blank">PDF</a> / 
+							<a href="https://arxiv.org/abs/2010.09557" target="_blank">arXiv</a> / 
 							<a href="./files/papers/ICPR2020_1127_poster.pdf" target="_blank">Poster</a> / 
-							<a rel="nofollow" target="_blank" href="https://1drv.ms/v/s!ArWQFS_nWzyBgbNJqW-Dc21a3eD6UA?e=ehGDZD">Video</a>
+							<a rel="nofollow" target="_blank" href="https://1drv.ms/v/s!ArWQFS_nWzyBgbNJqW-Dc21a3eD6UA?e=jNviy9">Video</a>
               <p></p>
               <p>A novel setup for automatic visual inspection of cracks in ceramic tile as well as studies the effect of various classifiers and height-varying illumination conditions for this task.</p>
             </td>
