--- a/index.html
+++ b/index.html
@@ -57,11 +57,13 @@
               </p>
 	      -->
             </td>
-            <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="files/mgpadalkar.png"><img style="width:100%;max-width:100%" alt="profile photo" src="files/mgpadalkar.png" class="hoverZoomLink"></a>
-			  <p>
-			  <center><i>Postdoc</i> @ <a href="https://pavis.iit.it/" target="_blank">PAVIS</a> / <a href="https://vgm.iit.it/" target="_blank">VGM</a>,<br><a href="https://www.iit.it/" target="_blank">IIT, Genova, Italy</a></center>
-			  </p>
+            <td style="padding: 2.5%; width: 40%; max-width: 40%; text-align: center; display: flex; flex-direction: column; align-items: center;">
+              <a href="files/mgpadalkar_2023.png" class="circular-frame">
+                  <img alt="profile photo" src="files/mgpadalkar_2023.png" class="hoverZoomLink">
+              </a>
+              <p>
+                  <center><i>Postdoc</i> @ <a href="https://pavis.iit.it/" target="_blank">PAVIS</a> <!--/ <a href="https://vgm.iit.it/" target="_blank">VGM</a>-->,<br><a href="https://www.iit.it/" target="_blank">IIT, Genova, Italy</a></center>
+              </p>
             </td>
           </tr>
         </tbody></table>
