Included missing publications
Included missing publications

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Milind G. Padalkar</name>
               </p>
-              <p>I am a postdoc at <a href="https://pavis.iit.it/" target="_blank">PAVIS</a> / <a href="https://vgm.iit.it/" target="_blank">VGM</a>, Istituto Italiano di Tecnologia (<a href="https://www.iit.it/" target="_blank">IIT</a>), Genova, Italy, working with <a href="https://www.iit.it/people/alessio-delbue" target="_blank" >Dr. Alessio Del Bue</a>. My current work is broadly on industrial projects and focuses on defect detection, mainly in combustion chamber tiles and textile yarn, using computer vision and machine learning.
+              <p>I am a postdoc at <a href="https://pavis.iit.it/" target="_blank">PAVIS</a> / <a href="https://vgm.iit.it/" target="_blank">VGM</a>, Istituto Italiano di Tecnologia (<a href="https://www.iit.it/" target="_blank">IIT</a>), Genova, Italy, working with <a href="https://www.iit.it/people/alessio-delbue" target="_blank" >Dr. Alessio Del Bue</a>. My current work is broadly on defect detection in infrastructure elements using computer vision and machine learning. Earlier I have worked on industrial projects focused on defect enhancement and detection mainly for combustion chamber tiles and textile yarn.
 			  <p>
 			  Prior to joining IIT, I worked as a senior research engineer at <a href="http://wwww.vehant.com" target="_blank">Vehant Technologies</a> (Mar. 2017 - Dec. 2018).
 			  </p>
@@ -58,8 +58,8 @@
 	      -->
             </td>
             <td style="padding: 2.5%; width: 40%; max-width: 40%; text-align: center; display: flex; flex-direction: column; align-items: center;">
-              <a href="files/mgpadalkar_2023.png" class="circular-frame">
-                  <img alt="profile photo" src="files/mgpadalkar_2023.png" class="hoverZoomLink">
+              <a href="files/mgpadalkar_2023_low_res.png" class="circular-frame">
+                  <img alt="profile photo" src="files/mgpadalkar_2023_low_res.png" class="hoverZoomLink">
               </a>
               <p>
                   <center><i>Postdoc</i> @ <a href="https://pavis.iit.it/" target="_blank">PAVIS</a> <!--/ <a href="https://vgm.iit.it/" target="_blank">VGM</a>-->,<br><a href="https://www.iit.it/" target="_blank">IIT, Genova, Italy</a></center>
@@ -79,6 +79,52 @@
           </tr>
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+		
+		<tr onmouseout="ANIDIS_2022_teaser_stop()" onmouseover="ANIDIS_2022_teaser_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+			  <div class="one">
+			    <div class="two" id='ANIDIS_2022_teaser'>
+					<img src="files/papers/ANIDIS_2022_teaser_final.jpg" width=160>
+				</div>
+				<img src='files/papers/ANIDIS_2022_teaser_init.jpg' width="160">
+              </div>
+			  <script type="text/javascript">
+                function ANIDIS_2022_teaser_start() {
+                  document.getElementById('ANIDIS_2022_teaser').style.opacity = "1";
+                }
+
+                function ANIDIS_2022_teaser_stop() {
+                  document.getElementById('ANIDIS_2022_teaser').style.opacity = "0";
+                }
+                ANIDIS_2022_teaser_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="https://doi.org/10.1016/j.prostr.2023.01.258" target="_blank">
+                <papertitle>Artificial Intelligence tools to predict the level of defectiveness of existing bridges</papertitle>
+              </a>
+              <br>
+			  Agnese Natali, 
+              <strong>Milind G. Padalkar</strong>, 
+			  Vincenzo Messina, Walter Salvatore, 
+			  <a href="https://www.iit.it/people/pietro-morerio">Pietro Morerio</a>, 
+              <a href="https://www.iit.it/people/alessio-delbue">Alessio Del Bue</a>, 
+			  <a href="https://www.iit.it/people/carlos-beltran">Carlos Beltran-Gonzalez</a>
+			  <br>
+              <em>19th ANIDIS Conference</em>, 2022  
+              <br>
+							<a href='https://www.sciencedirect.com/science/article/pii/S2452321623002676/pdf?md5=7c2e2b08cdd5149abee994b7d96d5a1c&pid=1-s2.0-S2452321623002676-main.pdf' target="_blank">PDF</a>
+			  <!--							
+							/
+							<a href='./files/papers/ICIP2021_2077_supp.pdf' target="_blank">Sup. Material</a> / 
+							<a href="./files/papers/ICIP2021_2077_poster.pdf" target="_blank">Poster</a> / 
+							<a href="./files/papers/ICIP2021_2077_presentation.pdf" target="_blank">Slides</a> / 
+							<a rel="nofollow" target="_blank" href="https://1drv.ms/v/s!ArWQFS_nWzyBgbNsPUgiaivRFYCwXg?e=2dmYwL">Video</a>
+			  -->
+              <p></p>
+              <p>Various defects in bridges are detected using patch based classifiers.</p>
+            </td>
+          </tr>
 
 
 		<tr onmouseout="ICIAP2022_203_teaser_stop()" onmouseover="ICIAP2022_203_teaser_start()">
@@ -121,6 +167,41 @@
 	      -->
               <p></p>
               <p>Our paper presents an end-to-end approach that leverages single-view RGB images for estimating an ordered list of 3D key-point.</p>
+            </td>
+          </tr>
+		  
+		  <tr onmouseout="ITALIA2022_113_teaser_stop()" onmouseover="ITALIA2022_113_teaser_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+			  <div class="one">
+			    <div class="two" id='ITALIA2022_113_teaser'>
+					<img src="files/papers/ITALIA2022_113_teaser_final.jpg" width=160>
+				</div>
+				<img src='files/papers/ITALIA2022_113_teaser_init.jpg' width="160">
+              </div>
+			  <script type="text/javascript">
+                function ITALIA2022_113_teaser_start() {
+                  document.getElementById('ITALIA2022_113_teaser').style.opacity = "1";
+                }
+
+                function ITALIA2022_113_teaser_stop() {
+                  document.getElementById('ITALIA2022_113_teaser').style.opacity = "0";
+                }
+                ITALAI2022_113_teaser_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+							<a href="https://www.ital-ia2022.it/assets/zip/industria.zip" target="_blank">
+                <papertitle>Enhancing Machine Learning Pipelines on Industrial Applications</papertitle>
+              </a>
+              <br>
+			  <a href="https://www.iit.it/people/carlos-beltran">Carlos Beltran-Gonzalez</a>, 
+              <strong>Milind G. Padalkar</strong>, 
+              <a href="https://www.iit.it/people/alessio-delbue">Alessio Del Bue</a>  <br>
+              <em><a href="https://www.ital-ia2022.it/" target="_blank">Ital-IA</a></em>, 2022  
+              <br>
+							<a href='./files/papers/ItalIA2022_113_paper.pdf' target="_blank">PDF</a>
+              <p></p>
+              <p>Our paper explains how a hybrid image fusion technique can help to enhance the human annotation performance for industrial defect detection.</p>
             </td>
           </tr>
 
