--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <a href="https://scholar.google.co.in/citations?user=D2tVZk8AAAAJ">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://twitter.com/mgpadalkar" target="_blank">Twitter</a> &nbsp/&nbsp
                 <a href="https://github.com/mgpadalkar/" target="_blank">Github</a> &nbsp/&nbsp
-				<a href="files/milind-cv.pdf">CV</a>
+				<a href="files/milind_cv.pdf">CV</a>
               </p>
 	      <!--
 	      <p>
