--- a/survey/index.html
+++ b/survey/index.html
@@ -2,23 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=640">
+    <meta name="viewport" content="width=1024">
     <meta name="description" content="Embedded Google Form">
-    <title>Google Form Embed</title>
+    <title>Are you troubled by strong lights?</title>
     <style>
         body {
-            width: 640px;
+            width: 1024px;
             margin: 0 auto;
         }
         iframe {
             width: 100%;
-            height: 4401px; /* Adjust the height as needed */
+            height: 100vh; /* Adjust the height as needed */
             border: none;
         }
     </style>
 </head>
 <body>
-    <h1>Fill out this form</h1>
+    <!--<h1>Fill out this form</h1>-->
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfqaza1x6F3k_w_K1D3Xj9k_ZiI0IQ200KBLzG6QW7vhNRfHA/viewform?embedded=true"></iframe>
 </body>
 </html>
