Image added to survey
Image added to survey.

Changes to be committed:
      modified:   survey/index.html

--- a/survey/index.html
+++ b/survey/index.html
@@ -10,6 +10,10 @@
             width: 1024px;
             margin: 0 auto;
         }
+        img {
+            width: 100%;
+            height: auto;
+        }        
         iframe {
             width: 100%;
             height: 100vh; /* Adjust the height as needed */
@@ -19,6 +23,7 @@
 </head>
 <body>
     <!--<h1>Fill out this form</h1>-->
+    <img src="https://lh7-us.googleusercontent.com/wDcrcC0rwqcLkM_A1r6NLJ57QLfFvYBKkWyl4rz3lnUgiFvM6v04C4h13pSbntzku5UTl9xIZd3v6a_H7O-4bu4OZMXsPp5Hioaaumzi69knW1Vl0qsma3ONraiSr0fSi3vLy1QelcGTCyMqXZeeN-uekDLXwg" alt="Lights & Eye Problems">
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfqaza1x6F3k_w_K1D3Xj9k_ZiI0IQ200KBLzG6QW7vhNRfHA/viewform?embedded=true"></iframe>
 </body>
 </html>
