--- a/survey/index.html
+++ b/survey/index.html
@@ -2,28 +2,53 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=1024">
-    <meta name="description" content="Embedded Google Form">
-    <title>Are you troubled by strong lights?</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Embed Google Form with Header</title>
     <style>
-        body {
-            width: 1024px;
-            margin: 0 auto;
+        body, html {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
         }
-        img {
+        .container {
             width: 100%;
+            max-width: 800px; /* You can adjust the max-width as needed */
+            margin: 0 auto;
+            text-align: center; /* Center align the content */
+        }
+        .header-image {
+            width: 80%;
             height: auto;
-        }        
-        iframe {
+            border-top-left-radius: 8px; /* Ensure the image corners match the container */
+            border-top-right-radius: 8px; /* Ensure the image corners match the container */
+            border-bottom-left-radius: 8px; /* Ensure the image corners match the container */
+            border-bottom-right-radius: 8px; /* Ensure the image corners match the container */
+            margin-top: 12px;
+        }
+        .responsive-iframe-container {
+            position: relative;
             width: 100%;
-            height: 100vh; /* Adjust the height as needed */
-            border: none;
+            padding-bottom: 75%; /* Adjust this to control the aspect ratio */
+            height: 0;
+        }
+        .responsive-iframe-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            border: 0;
         }
     </style>
 </head>
 <body>
-    <!--<h1>Fill out this form</h1>-->
-    <img src="https://lh7-us.googleusercontent.com/wDcrcC0rwqcLkM_A1r6NLJ57QLfFvYBKkWyl4rz3lnUgiFvM6v04C4h13pSbntzku5UTl9xIZd3v6a_H7O-4bu4OZMXsPp5Hioaaumzi69knW1Vl0qsma3ONraiSr0fSi3vLy1QelcGTCyMqXZeeN-uekDLXwg" alt="Lights & Eye Problems">
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfqaza1x6F3k_w_K1D3Xj9k_ZiI0IQ200KBLzG6QW7vhNRfHA/viewform?embedded=true"></iframe>
+    <div class="container">
+        <img src="https://lh4.googleusercontent.com/0lhVIBBeFaP8DiNzJeKFCtjeLuVIFojkIuXjZSdH6rVDZks2fTayv1K-fe6WYdu0bjxX5Td_Sjex0HrzlbkJnmR5ZOkpfdf_VuM91T4qkDfxUeImQ2MuZekYDqTZBpPMew=w1864" alt="Form Header" class="header-image">
+        <div class="responsive-iframe-container">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfqaza1x6F3k_w_K1D3Xj9k_ZiI0IQ200KBLzG6QW7vhNRfHA/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        </div>
+    </div>
 </body>
 </html>
+
