--- a/survey/index.html
+++ b/survey/index.html
@@ -44,9 +44,9 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://lh4.googleusercontent.com/0lhVIBBeFaP8DiNzJeKFCtjeLuVIFojkIuXjZSdH6rVDZks2fTayv1K-fe6WYdu0bjxX5Td_Sjex0HrzlbkJnmR5ZOkpfdf_VuM91T4qkDfxUeImQ2MuZekYDqTZBpPMew=w1864" alt="Form Header" class="header-image">
+        <!--<img src="https://lh4.googleusercontent.com/0lhVIBBeFaP8DiNzJeKFCtjeLuVIFojkIuXjZSdH6rVDZks2fTayv1K-fe6WYdu0bjxX5Td_Sjex0HrzlbkJnmR5ZOkpfdf_VuM91T4qkDfxUeImQ2MuZekYDqTZBpPMew=w1864" alt="Form Header" class="header-image">-->
         <div class="responsive-iframe-container">
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfqaza1x6F3k_w_K1D3Xj9k_ZiI0IQ200KBLzG6QW7vhNRfHA/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfqaza1x6F3k_w_K1D3Xj9k_ZiI0IQ200KBLzG6QW7vhNRfHA/viewform" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
     </div>
 </body>
