--- a/survey/index.html
+++ b/survey/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=0.7">
     <title>Embed Google Form with Header</title>
     <style>
         body, html {
             margin: 0;
             padding: 0;
-            width: 640px;
+            width: 100%;
             height: 100%;
         }
         .container {
