--- a/survey/index.html
+++ b/survey/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.5">
-    <title>Embed Google Form with Header</title>
+    <title>Are you troubled by strong lights?</title>
     <style>
         body, html {
             margin: 0;
