--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Milind G. Padalkar</name>
               </p>
-              <p>I am a postdoc at <a href="https://pavis.iit.it/" target="_blank">PAVIS</a> / <a href="https://vgm.iit.it/" target="_blank">VGM</a>, Istituto Italiano di Tecnologia (<a href="https://www.iit.it/" target="_blank">IIT</a>), Genova, Italy, working with <a href="https://www.iit.it/people/alessio-delbue" target="_blank" >Dr. Alessio Del Bue</a>. My current work is broadly on defect detection in infrastructure elements using computer vision and machine learning. Earlier I have worked on industrial projects focused on defect enhancement and detection mainly for combustion chamber tiles and textile yarn.
+              <p>I am a postdoc at <a href="https://pavis.iit.it/" target="_blank">PAVIS</a>, Istituto Italiano di Tecnologia (<a href="https://www.iit.it/" target="_blank">IIT</a>), Genova, Italy, working with <a href="https://www.iit.it/people/alessio-delbue" target="_blank" >Dr. Alessio Del Bue</a> (previously with <a href="https://www.vittoriomurino.com/" target="_blank" >Prof. Vittorio Murino</a>). My current work is broadly on defect detection in infrastructure elements using computer vision and machine learning. I am also interested in the topics of multi-exposure and multi-illumination fusion. Earlier I have worked on industrial projects focused on defect enhancement and detection mainly for combustion chamber tiles and textile yarn.
 			  <p>
 			  Prior to joining IIT, I worked as a senior research engineer at <a href="http://wwww.vehant.com" target="_blank">Vehant Technologies</a> (Mar. 2017 - Dec. 2018).
 			  </p>
