--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                 </script>
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4349267" target="_blank">
-                  <papertitle><font color="black">CDHN: Cross-Domain Hallucination Network For 3D Key-points Estimation”, Pattern Recognition</font></papertitle>
+                <a href="https://doi.org/10.1016/j.patcog.2024.111188" target="_blank">
+                  <papertitle>CDHN: Cross-Domain Hallucination Network For 3D Key-points Estimation</papertitle>
                 </a>
                 <br>
                 <a href="https://www.iit.it/people/mohammad-zohaib">Mohammad Zohaib</a>,
@@ -114,9 +114,9 @@
                 <a href="https://www.iit.it/people/pietro-morerio">Pietro Morerio</a>,
                 <a href="https://www.iit.it/people/matteo-taiana">Matteo Taiana</a>,
                 <a href="https://www.iit.it/people/alessio-delbue">Alessio Del Bue</a>  <br>
-                <em>Pattern Recognition, Accepted [Nov. 2024]</em><br>
+                <em>Pattern Recognition</em>, November 2024<br>
                 <!-- [<font color="red"><strong>Oral presentation</strong></font>] -->
-                <a href='https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4349267' target="_blank">PDF</a>
+                <a href='https://doi.org/10.1016/j.patcog.2024.111188' target="_blank">PDF</a>
                 <p> The paper presents a teacher-student network that hallucinates 3D features directly from RGB images to improve the keypoints localization.
                   </p>
               </td>
