--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
               </script>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://dx.doi.org/10.5244/C.29.105">
+              <a href="https://bmva-archive.org.uk/bmvc/2015/papers/paper105/">
                 <papertitle>Simultaneous Inpainting and Super-resolution Using Self-learning</papertitle>
               </a>
               <br>
@@ -440,8 +440,8 @@
               <br>
 	      <em>BMVC</em>, 2015
               <br>
-              <a href='http://www.bmva.org/bmvc/2015/papers/paper105/paper105.pdf' target="_blank">PDF</a> / 
-              <a href='http://www.bmva.org/bmvc/2015/papers/paper105/sup105.zip' target="_blank">Sup. Material</a> / 
+              <a href='https://bmva-archive.org.uk/bmvc/2015/papers/paper105/abstract105.pdf' target="_blank">PDF</a> / 
+              <a href='https://bmva-archive.org.uk/bmvc/2015/papers/paper105/sup105.zip' target="_blank">Sup. Material</a> / 
               <a href="./files/papers/bmvc2015_329_poster.pdf" target="_blank">Poster</a>
               <p>We construct dictionaries of image-representative low and high resolution patch pairs from the known regions in the test image and its coarser resolution. Inpainting of the missing pixels is performed using exemplars found by comparing patch details at a finer resolution by making use of the constructed dictionaries.</p>
             </td>
